adds community.html file

--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,7 @@ font-family: "Times New Roman", Times, serif;
 font-size: larger;
 font-style: italic;
 font-weight: bold;
-color: #500dec;
+color: blue;
 text-transform: capitalize;
 text-decoration-color: black;
 text-align: center;
